--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" action="./" name="edit">
-          <input class="popup__input" type="text" name="name" required placeholder="Жак-Ив Кусто">
-          <input class="popup__input" type="text" name="job" required placeholder="Исследователь океана">
+          <input class="popup__input" type="text" name="name" required placeholder="Имя">
+          <input class="popup__input" type="text" name="job" required placeholder="Профессия">
           <button class="popup__button" type="submit">Сохранить</button>
         </form>
         <button class="popup__close main-link" type="button"></button>
