feat добавить кнопку удаления карточки

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <ul class="elements root__elements">
           <li class="element">
             <img class="element__img" src="./images/gallery/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск.">
+            <button class="element__trash main-link" type="button"></button>
             <div class="element__block">
               <h2 class="element__title">Карачаевск</h2>
               <button class="element__icon element__icon_active" type="button"></button>
@@ -79,12 +80,23 @@
     <footer class="footer root__footer">
       <p class="footer__text">&copy; 2023 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div class="popup popup_edit">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" action="./" name="edit">
           <input class="popup__input" type="text" name="name" required placeholder="Имя">
           <input class="popup__input" type="text" name="job" required placeholder="Профессия">
+          <button class="popup__button" type="submit">Сохранить</button>
+        </form>
+        <button class="popup__close main-link" type="button"></button>
+      </div>
+    </div>
+    <div class="popup popup_add">
+      <div class="popup__container">
+        <h2 class="popup__title">Новое место</h2>
+        <form class="popup__form" action="./" name="edit">
+          <input class="popup__input" type="text" name="name" required placeholder="Название">
+          <input class="popup__input" type="text" name="job" required placeholder="Ссылка на картинку">
           <button class="popup__button" type="submit">Сохранить</button>
         </form>
         <button class="popup__close main-link" type="button"></button>
