--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
       </div>
     </div>
   </div>
+  <template id="element">
+    <li class="element">
+      <img class="element__img" src="" alt="">
+      <button class="element__trash main-link" type="button"></button>
+      <div class="element__block">
+        <h2 class="element__title"></h2>
+        <button class="element__icon element__icon_active" type="button"></button>
+      </div>
+    </li>
+  </template>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
