--- a/index.html
+++ b/index.html
@@ -31,49 +31,6 @@
       </section>
       <section class="root__elements-wrapper">
         <ul class="elements root__elements">
-          <li class="element">
-            <img class="element__img" src="./images/gallery/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск.">
-            <button class="element__trash main-link" type="button"></button>
-            <div class="element__block">
-              <h2 class="element__title">Карачаевск</h2>
-              <button class="element__icon element__icon_active" type="button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__img" src="./images/gallery/kirill-pershin-1556355-unsplash.png" alt="Гора Эльбрус.">
-            <div class="element__block">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button class="element__icon" type="button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__img" src="./images/gallery/kirill-pershin-1404681-unsplash.png" alt="Домбай.">
-            <div class="element__block">
-              <h2 class="element__title">Домбай</h2>
-              <button class="element__icon" type="button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__img" src="./images/gallery/kirill-pershin-1556355-unsplash.png" alt="Гора Эльбрус.">
-            <div class="element__block">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button class="element__icon" type="button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__img" src="./images/gallery/kirill-pershin-1404681-unsplash.png" alt="Домбай.">
-            <div class="element__block">
-              <h2 class="element__title">Домбай</h2>
-              <button class="element__icon" type="button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__img" src="./images/gallery/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Черкесия.">
-            <div class="element__block">
-              <h2 class="element__title">Карачаево-Черкесия</h2>
-              <button class="element__icon" type="button"></button>
-            </div>
-          </li>
         </ul>
       </section>
     </main>
@@ -94,7 +51,7 @@
     <div class="popup popup_add">
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form" action="./" name="edit">
+        <form class="popup__form" action="./" name="add">
           <input class="popup__input" type="text" name="name" required placeholder="Название">
           <input class="popup__input" type="text" name="job" required placeholder="Ссылка на картинку">
           <button class="popup__button" type="submit">Сохранить</button>
