--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
         <form class="popup__form" action="./" name="add">
-          <input class="popup__input" type="text" name="name" required placeholder="Название">
-          <input class="popup__input" type="text" name="job" required placeholder="Ссылка на картинку">
+          <input class="popup__input" type="text" name="title" required placeholder="Название">
+          <input class="popup__input" type="text" name="link" required placeholder="Ссылка на картинку">
           <button class="popup__button" type="submit">Сохранить</button>
         </form>
         <button class="popup__close main-link" type="button"></button>
