--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <button class="element__trash main-link" type="button"></button>
       <div class="element__block">
         <h2 class="element__title"></h2>
-        <button class="element__icon element__icon_active" type="button"></button>
+        <button class="element__icon" type="button"></button>
       </div>
     </li>
   </template>
