--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
         <button class="popup__close main-link" type="button"></button>
       </div>
     </div>
+    <div class="popup popup_image">
+      <div class="popup__image-wrapper">
+        <figure class="popup__figure">
+          <img class="popup__big-image" src="https://plus.unsplash.com/premium_photo-1675949335329-d42910909742?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Байкал">
+          <figcaption class="popup__figcaption">Байкал</figcaption>
+        </figure>
+        <button class="popup__close main-link" type="button"></button>
+      </div>
+    </div>
   </div>
   <template id="element">
     <li class="element">
