--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
   <template id="element">
     <li class="element">
-      <img class="element__img" src="" alt="">
+      <img class="element__img" src="https://plus.unsplash.com/premium_photo-1675949335329-d42910909742?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Байкал">
       <button class="element__trash main-link" type="button"></button>
       <div class="element__block">
         <h2 class="element__title"></h2>
