--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
     <div class="popup popup_edit">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" action="./" name="edit">
+        <form class="popup__form" action="./" name="edit" novalidate>
           <input class="popup__input popup__input_name" type="text" name="name" required placeholder="Имя">
+          <span class="popup__error"></span>
           <input class="popup__input popup__input_job" type="text" name="job" required placeholder="Профессия">
-          <button class="popup__button" type="submit">Сохранить</button>
+          <span class="popup__error"></span>
+          <button class="popup__button popup__button_disabled" type="submit">Сохранить</button>
         </form>
         <button class="popup__close main-link" type="button"></button>
       </div>
@@ -51,10 +53,12 @@
     <div class="popup popup_add">
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form" action="./" name="add">
-          <input class="popup__input popup__input_title" type="text" name="title" required placeholder="Название">
+        <form class="popup__form" action="./" name="add" novalidate>
+          <input class="popup__input popup__input_title popup__input_type_error" type="text" name="title" required placeholder="Название">
+          <span class="popup__error"></span>
           <input class="popup__input popup__input_link type="text" name="link" required placeholder="Ссылка на картинку">
-          <button class="popup__button" type="submit">Сохранить</button>
+          <span class="popup__error"></span>
+          <button class="popup__button popup__button_disabled" type="submit">Сохранить</button>
         </form>
         <button class="popup__close main-link" type="button"></button>
       </div>
