--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
     </li>
   </template>
   <script src="./scripts/constants.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
   <script src="./scripts/validate.js"></script>
-  <script src="./scripts/index.js"></script>
 </body>
 </html>
