--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
       </div>
     </li>
   </template>
-  <script src="./scripts/constants.js"></script>
-  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./pages/index.js"></script>
 </body>
 </html>
