feat: Настроить отображение количества лайков

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,10 @@
       <button class="element__trash main-link" type="button"></button>
       <div class="element__block">
         <h2 class="element__title"></h2>
-        <button class="element__icon" type="button"></button>
+        <div class="element__icon-wrapper">
+          <button class="element__icon" type="button"></button>
+          <span class="element__icon-count">1</span>
+        </div>
       </div>
     </li>
   </template>
