--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,16 @@
         <button class="popup__close main-link" type="button"></button>
       </div>
     </div>
+    <div class="popup popup_confirm">
+      <div class="popup__container">
+        <h2 class="popup__title popup__title_place_confirm">Вы уверены?</h2>
+        <form class="popup__form" name="confirm" novalidate>
+          <button class="popup__button" type="submit">Да</button>
+        </form>
+        <button class="popup__close main-link" type="button"></button>
+      </div>
+    </div>
+  </div>
   </div>
   <template id="element">
     <li class="element">
